--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chai-as-promised": "^5.2.0",
     "lodash": "^4.3.0",
     "mocha": "^2.4.5",
+    "moment-precise-range-plugin": "^1.2.1",
     "request-promise": "^2.0.0"
   }
 }
